Fixed overflow issue on scroll overflow-x hidden

--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -6,7 +6,7 @@
 }
 
 .main-container {
-  overflow-y: scroll;
+  overflow-x: hidden;
   height: 100vh;
 }
 
